--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.16.16"
+    "@astrojs/tailwind": "^5.1.2",
+    "@fontsource-variable/dm-sans": "^5.1.0",
+    "astro": "^4.16.16",
+    "tailwindcss": "^3.4.15"
+  },
+  "devDependencies": {
+    "prettier": "^3.4.1",
+    "prettier-plugin-astro": "^0.14.1",
+    "prettier-plugin-tailwindcss": "^0.6.9"
   }
 }
